[build-system]
build-backend = "mesonpy"

requires = ["meson-python >= 0.18.0", "cython >= 3.1.0"]

[project]
name = "cydrogen"
version = "0.0.1"
description = "cython bindings for the libhydrogen library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

[dependency-groups]
develop = [
  "ruff>=0.11.10",
  "mypy>=1.15.0",
  "mypy-extensions>=1.1.0",
  "cython-lint>=0.16.6",
  "meson>=1.8.0",
  "meson-python>=0.18.0",
  "build>=0.11.0",
  "nox",
  "pre-commit",
]

[tool.cython-lint]
max-line-length = 140

[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
